[tool.poetry]
name = "yade"
version = "0.1.0"
description = "Yet another debug extension for dpy"
authors = ["Sofia \"dzshn\" N. L. <zshn@pm.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
"discord.py" = {git = "https://github.com/Rapptz/discord.py"}

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
isort = "^5.9.3"
black = "^21.9b0"

[tool.black]
skip-string-normalization = true

[tool.isort]
profile = "google"
force_sort_within_sections = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
